Programando el form rProyectos y agregando mdiParent al MainForm.

--- a/UI/Registros/rProyectos.resx
+++ b/UI/Registros/rProyectos.resx
@@ -73,7 +73,7 @@
   <data name="Removerbutton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        VwAAAFcBDhTleAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAC9SURBVDhPpdNt
+        VQAAAFUBceom8QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAC9SURBVDhPpdNt
         DgExFIXh/mEx2I4NsB3fYjVYBTaC8APhPVWTTua2ScdJnmRy57ajM5czMsACR1wDXaume8l0scEL74Qn
         1lBvLSrsYS2y7FDbRE+2GnNW8NG59NOsphyt6cMtQ6GNGdwpKpQ6wJ2jwg0jDBN0745fv9YWbTBGY4O/
         jzCPCqUm8J+i7WfswUfjaTXl6L9RRWOp8bQaLVt0UIs20XjmjvOAntxYHEfvRBOmN3wJdD1FdeZvnPsA
@@ -83,7 +83,7 @@
   <data name="Agregarbutton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        dAAAAHQBMYXlgQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHDSURBVDhPjZLL
+        cgAAAHIBsYahGgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHDSURBVDhPjZLL
         LwNRFMZnReJfwZ9ix7Qjnemgis6jQnUaC6mNpVQIiaiFxNZaBLERqhWPVEQiXt0Rr2qIpO1xvztj0mlJ
         epJvM3O/3z3n3E+oL0vXOxOGNmcZWp6p5ChvmZHUpDnc4RxrLMMwWtnBRaYKE/2jMtNCMplscWx2OeZd
         fihqkLGaptBxlvoK9yRmv8l/9EqhjT2yRqO/oB0PJG5GlvBjIhGn0PkpKa8vrrozZVf+bJHGp6Y5JGHo
@@ -106,7 +106,7 @@
         cQgXX3836R2JQA6uAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="Guardarbutton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
         bQAAAG0BjlwfygAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGBSURBVDhPldPP
@@ -122,7 +122,7 @@
   <data name="Eliminarbutton.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        VwAAAFcBDhTleAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEWSURBVDhPpVPB
+        VQAAAFUBceom8QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEWSURBVDhPpVPB
         TsMwDM0FPoZxG0mOQDNxYsf91QaFjcO+BfgK2IdsTRWtFIVnN6qatJUGWHqSaz/bcfIqUivuri6tkbk1
         6hOwAfBlTrlA65tfTM5Lo19A/gb8COpyptbEDWWNUQDJ94Q8jky9RU3C5GHyCMpMPXNxs7Oqo+T9dUQe
         idXFrZwIa/RTN1HOb3zlnHebVRsjn2K9Jpl6QAO1i4KA2yx9VVXebdeRn/LQ4AP7q6KXAHjq8cjonibB
